Redesigned the nav Bar

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
+    "v-click-outside": "^3.2.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
