--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@headlessui/vue": "^1.7.16",
     "v-click-outside": "^3.2.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-draggable-resizable": "^2.3.0",
+    "vue-router": "^4.2.4",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
