--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "v-click-outside": "^3.2.0",
     "vue": "^3.3.4",
     "vue-draggable-resizable": "^2.3.0",
+    "vue-email-editor": "^2.0.0",
+    "vue-quill-editor": "^3.0.6",
+    "vue-resizable": "^2.1.7",
     "vue-router": "^4.2.4",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
