--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
+    "cross-spawn": "^7.0.3",
     "v-click-outside": "^3.2.0",
     "vue": "^3.3.4",
     "vue-draggable-resizable": "^2.3.0",
@@ -39,3 +40,4 @@
     "vitest": "^0.34.4"
   }
 }
+
